--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,85 @@
-<p>basicos works!</p>
+<h2>Template: Básicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form  (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario" >
+
+            <!-- Campo de Producto -->
+            <div class="mb-3 row">
+                <label for="nombre" class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input type="text"
+                           id="nombre"
+                           formControlName="nombre"
+                           class="form-control"
+                           placeholder="Nombre del proucto">
+                    <span *ngIf="campoEsValido('nombre')" 
+                          class="form-text text-danger">
+                        Debe de ser de 3 letras
+                    </span>
+                </div>
+            </div>
+
+            <!-- Campo de Precio del producto -->
+            <div class="mb-3 row">
+                <label for="precio" class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number" 
+                            id="precio"
+                            formControlName="precio"
+                            class="form-control"
+                            placeholder="Precio del producto">
+                    <span *ngIf="campoEsValido('precio')"
+                          class="form-text text-danger">
+                        El precio debe ser mayor a 0
+                    </span>
+                </div>
+            </div> 
+                      
+            <!-- Campo de existencias del producto -->
+            <div class="mb-3 row">
+                <label for="existencias" class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number" 
+                            id="existencias"
+                            formControlName="existencias"
+                            class="form-control"
+                            placeholder="Existencias del producto">
+                    <span *ngIf="campoEsValido('existencias')"
+                            class="form-text text-danger">
+                            La existencias deben ser mayor a 0
+                    </span>
+                </div>
+            </div> 
+
+            <div class="row">
+                <div class="col">
+                    <button type="submit"
+                            class="btn btn-primary float-end">
+                                Guardar
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+
+        <span>Valid</span>
+        <pre>{{ miFormulario.valid }}</pre>
+
+        <span>Pristine</span>
+        <pre>{{ miFormulario.pristine }}</pre>
+
+        <span>Touched</span>
+        <pre>{{ miFormulario.touched }}</pre>
+
+        <span>Value</span>
+        <pre>{{ miFormulario.value | json }}</pre>
+
+
+    </div>
+</div>
